--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Item</th>
-                                <th>Amount</th>
+                                <th>Price</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
